[package]
name = "lazy_hacker_editor"
version = "0.6.0"
authors = ["Ignacio Lago <ignacio@ignaciolago.com>"]
edition = "2018"

[dependencies]
pancurses = "0.16"
structopt = "0.3"
ctrlc = "3.1"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "lhe"
path = "src/main.rs"
