[package]
name = "lazy_hacker_editor"
description = """
Write code already written. Fake code editor that writes
real code, probably yours, no matter which key you stroke.
"""
version = "0.6.1"
authors = ["Ignacio Lago <ignacio@ignaciolago.com>"]
edition = "2018"
homepage = "https://github.com/ignlg/lazy_hacker_editor"
repository = "https://github.com/ignlg/lazy_hacker_editor"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
  "lazy",
  "hacker",
  "editor",
  "prank",
  "fun",
  "funny",
  "command-line",
  "command-line-tool",
  "ncurses",
]

[dependencies]
pancurses = "0.16"
structopt = "0.3"
ctrlc = "3.1"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "lhe"
path = "src/main.rs"
